[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Cloud.gd" type="Script" id=1]
[ext_resource path="res://gfx/cloud-thin.png" type="Texture" id=2]
[ext_resource path="res://gfx/cloud-medium.png" type="Texture" id=3]
[ext_resource path="res://gfx/cloud-thick.png" type="Texture" id=4]
[ext_resource path="res://gfx/cloud-shape1.png" type="Texture" id=5]
[ext_resource path="res://gfx/cloud-shape2.png" type="Texture" id=6]
[ext_resource path="res://gfx/cloud-shape3.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 200.0

[sub_resource type="Animation" id=1]

resource_name = "LightningStrike"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 1.0
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Gravity", "Initial Velocity", "Scale" ]

[node name="Cloud" type="Node2D"]

scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="thin" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 0, -10 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="medium" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 0, -10 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="thick" type="Sprite" parent="." index="2"]

visible = false
use_parent_material = true
position = Vector2( 0, -10 )
z_as_relative = false
texture = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Material", "Pause", "Region", "Transform", "Visibility", "Z Index" ]

[node name="shape1" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( 0, -10 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Material" ]

[node name="shape2" type="Sprite" parent="." index="4"]

visible = false
texture = ExtResource( 6 )
_sections_unfolded = [ "Material" ]

[node name="shape3" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 0, -10 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Lightning" type="Node2D" parent="." index="6"]

visible = false
_sections_unfolded = [ "Visibility" ]

[node name="Area2D" type="Area2D" parent="Lightning" index="0"]

editor/display_folded = true
scale = Vector2( 1, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision_layer = 3
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lightning/Area2D" index="0"]

position = Vector2( 19.0627, 115.965 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Lightning" index="1"]

scale = Vector2( 1, 1 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lightning" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/LightningStrike = SubResource( 1 )
blend_times = [  ]

[node name="Particles2D" type="Particles2D" parent="Lightning" index="3"]

emitting = false
amount = 8
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[connection signal="body_entered" from="Lightning/Area2D" to="." method="_on_Area2D_body_entered"]


